--- a/systools/systools/systools.vcxproj
+++ b/systools/systools/systools.vcxproj
@@ -154,6 +154,8 @@
     <ClInclude Include="DBObject.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="TDDatabase.h" />
+    <ClInclude Include="TDUser.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="DBObject.cpp" />
@@ -164,6 +166,8 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="systools.cpp" />
+    <ClCompile Include="TDDatabase.cpp" />
+    <ClCompile Include="TDUser.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
